[tool.poetry]
name = "st-backend"
version = "0.1.0"
description = ""
authors = ["Adnan Baysal <adbaysal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
